# SimpleOCR

./: .gitignore  README.md  my_code.py  output.txt  pyproject.toml
